<?xml version="1.0"?>
<package format="3">
  <name>bno055_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for the BNO055 IMU</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>adafruit_bno055</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>